--- a/openfisca_pf/tests/daf/redevance_domaniale/tests_unitaires/controle_emprise_type_5.yaml
+++ b/openfisca_pf/tests/daf/redevance_domaniale/tests_unitaires/controle_emprise_type_5.yaml
@@ -16,7 +16,7 @@
     montant_total_redevance_domaniale: 10000
     montant_base_redevance_domaniale: 5000
     type_calcul_redevance_domaniale: 5
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 2 - if_eco_02_parc_poisson_passe
   period: 2018-01-01
   input:
@@ -35,7 +35,7 @@
     montant_total_redevance_domaniale: 40000
     montant_base_redevance_domaniale: 20000
     type_calcul_redevance_domaniale: 5
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 3 - if_eco_01_parc_poisson_hors_passe surf>1000
   period: 2018-01-01
   input:
@@ -54,7 +54,7 @@
     montant_total_redevance_domaniale: 25000
     montant_base_redevance_domaniale: 12500
     type_calcul_redevance_domaniale: 5
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 4 - if_eco_02_parc_poisson_passe surf>1000
   period: 2018-01-01
   input:
@@ -73,7 +73,7 @@
     montant_total_redevance_domaniale: 100000
     montant_base_redevance_domaniale: 50000
     type_calcul_redevance_domaniale: 5
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 5 - if_eco_01_parc_poisson_hors_passe
   period: 2018-01-01
   input:
@@ -92,7 +92,7 @@
     montant_total_redevance_domaniale: 13000
     montant_base_redevance_domaniale: 6500
     type_calcul_redevance_domaniale: 5
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 6 - if_eco_02_parc_poisson_passe
   period: 2018-01-01
   input:
@@ -111,4 +111,4 @@
     montant_total_redevance_domaniale: 52000
     montant_base_redevance_domaniale: 26000
     type_calcul_redevance_domaniale: 5
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
