--- a/openfisca_pf/tests/daf/redevance_domaniale/tests_unitaires/controle_emprise_type_7.yaml
+++ b/openfisca_pf/tests/daf/redevance_domaniale/tests_unitaires/controle_emprise_type_7.yaml
@@ -16,7 +16,7 @@
     montant_total_redevance_domaniale: 550000
     montant_base_redevance_domaniale: 550000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 2 - ex_eco_02_dpf_pour_entite_publique - Zone_1
   period: 2018-01-01
   input:
@@ -35,7 +35,7 @@
     montant_total_redevance_domaniale: 330000
     montant_base_redevance_domaniale: 330000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 3 - ex_eco_03_dpm_hors_entite_publique - Zone_1
   period: 2018-01-01
   input:
@@ -54,7 +54,7 @@
     montant_total_redevance_domaniale: 440000
     montant_base_redevance_domaniale: 440000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 4 - ex_eco_04_dpm_pour_entite_publique - Zone_1
   period: 2018-01-01
   input:
@@ -73,7 +73,7 @@
     montant_total_redevance_domaniale: 330000
     montant_base_redevance_domaniale: 330000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 5 - ex_eco_01_dpf_hors_entite_publique - Zone_2
   period: 2018-01-01
   input:
@@ -92,7 +92,7 @@
     montant_total_redevance_domaniale: 550000
     montant_base_redevance_domaniale: 550000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 6 - ex_eco_02_dpf_pour_entite_publique - Zone_2
   period: 2018-01-01
   input:
@@ -111,7 +111,7 @@
     montant_total_redevance_domaniale: 330000
     montant_base_redevance_domaniale: 330000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 7 - ex_eco_03_dpm_hors_entite_publique - Zone_2
   period: 2018-01-01
   input:
@@ -130,7 +130,7 @@
     montant_total_redevance_domaniale: 440000
     montant_base_redevance_domaniale: 440000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 8 - ex_eco_04_dpm_pour_entite_publique - Zone_2
   period: 2018-01-01
   input:
@@ -149,7 +149,7 @@
     montant_total_redevance_domaniale: 330000
     montant_base_redevance_domaniale: 330000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 9 - ex_eco_01_dpf_hors_entite_publique - Zone_3
   period: 2018-01-01
   input:
@@ -168,7 +168,7 @@
     montant_total_redevance_domaniale: 220000
     montant_base_redevance_domaniale: 220000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 10 - ex_eco_02_dpf_pour_entite_publique - Zone_3
   period: 2018-01-01
   input:
@@ -187,7 +187,7 @@
     montant_total_redevance_domaniale: 110000
     montant_base_redevance_domaniale: 110000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 11 - ex_eco_03_dpm_hors_entite_publique - Zone_3
   period: 2018-01-01
   input:
@@ -206,7 +206,7 @@
     montant_total_redevance_domaniale: 220000
     montant_base_redevance_domaniale: 220000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 12 - ex_eco_04_dpm_pour_entite_publique - Zone_3
   period: 2018-01-01
   input:
@@ -225,7 +225,7 @@
     montant_total_redevance_domaniale: 110000
     montant_base_redevance_domaniale: 110000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 13 - ex_eco_01_dpf_hors_entite_publique - Zone_4
   period: 2018-01-01
   input:
@@ -244,7 +244,7 @@
     montant_total_redevance_domaniale: 220000
     montant_base_redevance_domaniale: 220000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 14 - ex_eco_02_dpf_pour_entite_publique - Zone_4
   period: 2018-01-01
   input:
@@ -263,7 +263,7 @@
     montant_total_redevance_domaniale: 110000
     montant_base_redevance_domaniale: 110000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 15 - ex_eco_03_dpm_hors_entite_publique - Zone_4
   period: 2018-01-01
   input:
@@ -282,7 +282,7 @@
     montant_total_redevance_domaniale: 220000
     montant_base_redevance_domaniale: 220000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 16 - ex_eco_04_dpm_pour_entite_publique - Zone_4
   period: 2018-01-01
   input:
@@ -301,7 +301,7 @@
     montant_total_redevance_domaniale: 110000
     montant_base_redevance_domaniale: 110000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 17 - ex_eco_01_dpf_hors_entite_publique - Zone_5
   period: 2018-01-01
   input:
@@ -320,7 +320,7 @@
     montant_total_redevance_domaniale: 220000
     montant_base_redevance_domaniale: 220000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 18 - ex_eco_02_dpf_pour_entite_publique - Zone_5
   period: 2018-01-01
   input:
@@ -339,7 +339,7 @@
     montant_total_redevance_domaniale: 110000
     montant_base_redevance_domaniale: 110000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 19 - ex_eco_03_dpm_hors_entite_publique - Zone_5
   period: 2018-01-01
   input:
@@ -358,7 +358,7 @@
     montant_total_redevance_domaniale: 220000
     montant_base_redevance_domaniale: 220000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
 - name: Test 20 - ex_eco_04_dpm_pour_entite_publique - Zone_5
   period: 2018-01-01
   input:
@@ -377,4 +377,4 @@
     montant_total_redevance_domaniale: 110000
     montant_base_redevance_domaniale: 110000
     type_calcul_redevance_domaniale: 7
-    # temporalite_redevance_domaniale: Not Applicable
+    temporalite_redevance_domaniale: Non_Applicable
