--- a/openfisca_pf/tests/daf/redevance_domaniale/tests_unitaires/controle_emprise_type_8.yaml
+++ b/openfisca_pf/tests/daf/redevance_domaniale/tests_unitaires/controle_emprise_type_8.yaml
@@ -16,7 +16,7 @@
     montant_total_redevance_domaniale: 60000
     montant_base_redevance_domaniale: 30000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 2 - ag_priv_02_elevage - Zone_1
   period: 2018-01-01
   input:
@@ -35,7 +35,7 @@
     montant_total_redevance_domaniale: 60000
     montant_base_redevance_domaniale: 30000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 3 - ag_priv_03_coprah - Zone_1
   period: 2018-01-01
   input:
@@ -54,7 +54,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 4 - ag_priv_04_agroforesterie - Zone_1
   period: 2018-01-01
   input:
@@ -73,7 +73,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 5 - ag_priv_05_agrotransformation - Zone_1
   period: 2018-01-01
   input:
@@ -92,7 +92,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 6 - ag_priv_01_maraichage - Zone_2
   period: 2018-01-01
   input:
@@ -111,7 +111,7 @@
     montant_total_redevance_domaniale: 30000
     montant_base_redevance_domaniale: 15000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 7 - ag_priv_02_elevage - Zone_2
   period: 2018-01-01
   input:
@@ -130,7 +130,7 @@
     montant_total_redevance_domaniale: 30000
     montant_base_redevance_domaniale: 15000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 8 - ag_priv_03_coprah - Zone_2
   period: 2018-01-01
   input:
@@ -149,7 +149,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 9 - ag_priv_04_agroforesterie - Zone_2
   period: 2018-01-01
   input:
@@ -168,7 +168,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 10 - ag_priv_05_agrotransformation - Zone_2
   period: 2018-01-01
   input:
@@ -187,7 +187,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 11 - ag_priv_01_maraichage - Zone_3
   period: 2018-01-01
   input:
@@ -206,7 +206,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 12 - ag_priv_02_elevage - Zone_3
   period: 2018-01-01
   input:
@@ -225,7 +225,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 13 - ag_priv_03_coprah - Zone_3
   period: 2018-01-01
   input:
@@ -244,7 +244,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 14 - ag_priv_04_agroforesterie - Zone_3
   period: 2018-01-01
   input:
@@ -263,7 +263,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 15 - ag_priv_05_agrotransformation - Zone_3
   period: 2018-01-01
   input:
@@ -282,7 +282,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 16 - ag_priv_01_maraichage - Zone_4
   period: 2018-01-01
   input:
@@ -301,7 +301,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 17 - ag_priv_02_elevage - Zone_4
   period: 2018-01-01
   input:
@@ -320,7 +320,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 18 - ag_priv_03_coprah - Zone_4
   period: 2018-01-01
   input:
@@ -339,7 +339,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 19 - ag_priv_04_agroforesterie - Zone_4
   period: 2018-01-01
   input:
@@ -358,7 +358,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 20 - ag_priv_05_agrotransformation - Zone_4
   period: 2018-01-01
   input:
@@ -377,7 +377,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 21 - ag_priv_01_maraichage - Zone_5
   period: 2018-01-01
   input:
@@ -396,7 +396,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 22 - ag_priv_02_elevage - Zone_5
   period: 2018-01-01
   input:
@@ -415,7 +415,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 23 - ag_priv_03_coprah - Zone_5
   period: 2018-01-01
   input:
@@ -434,7 +434,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 24 - ag_priv_04_agroforesterie - Zone_5
   period: 2018-01-01
   input:
@@ -453,7 +453,7 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
 - name: Test 25 - ag_priv_05_agrotransformation - Zone_5
   period: 2018-01-01
   input:
@@ -472,4 +472,4 @@
     montant_total_redevance_domaniale: 20000
     montant_base_redevance_domaniale: 10000
     type_calcul_redevance_domaniale: 8
-    # temporalite_redevance_domaniale: Annuel
+    temporalite_redevance_domaniale: Annuel
