--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,7 +5,6 @@ on:
     branches: 
       - 'master'
       - 'feature/*'
-      - '41-*'
     tags:
       - '*'
   pull_request:
@@ -54,8 +53,8 @@ jobs:
       id: findandreplace
       with:
         source: ${{ github.ref }}
-        find: 'refs/heads/'        
-        replace: ''
+        find: 'refs/heads/feature/'        
+        replace: 'feature_'
     -
       name: Build and push (not master - not tag)
       uses: docker/build-push-action@v2.6.1
