--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: 
       - 'master'
+      - 'develop'
       - 'feature/*'
     tags:
       - '*'
@@ -49,16 +50,16 @@ jobs:
     -
       name: remove / in branch name (not master - not tag)
       uses: mad9000/actions-find-and-replace-string@2
-      if: github.event_name == 'push' && github.ref != 'refs/heads/master' && github.ref != 'refs/tags'
+      if: github.event_name == 'push' && github.ref != 'refs/heads/master' && github.ref != 'refs/heads/develop' && github.ref != 'refs/tags'
       id: findandreplace
       with:
         source: ${{ github.ref }}
         find: 'refs/heads/feature/'        
         replace: 'feature_'
     -
-      name: Build and push (not master - not tag)
+      name: Build and push (not master - not develop -  not tag)
       uses: docker/build-push-action@v2.6.1
-      if: github.event_name == 'push' && github.ref != 'refs/heads/master' && github.ref != 'refs/tags'
+      if: github.event_name == 'push' && github.ref != 'refs/heads/master' && github.ref != 'refs/heads/develop'  && github.ref != 'refs/tags'
       with:
         context: .
         file: ./docker/Dockerfile
@@ -67,6 +68,18 @@ jobs:
         push: true
         tags: |
           ${{ env.repo }}:${{ steps.findandreplace.outputs.value }}
+    -
+      name: Build and push (develop)
+      uses: docker/build-push-action@v2.6.1
+      if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
+      with:
+        context: .
+        file: ./docker/Dockerfile
+        platforms: linux/amd64
+        pull: true
+        push: true
+        tags: |
+          ${{ env.repo }}:develop
     -
       name: Build and push (master)
       uses: docker/build-push-action@v2.6.1
