--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     container: python:3.7
     steps:
     -
@@ -30,7 +30,7 @@ jobs:
       run: make test
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs: test
     env:
       repo: "govpf/openfisca-pf"
